# data-mining

./: luiza_v.ipynb  pyproject.toml
src/: Group94_EDA_Code.ipynb  GroupXX_EDA_Code.ipynb  OUTDATED_Group94_EDA_Code.ipynb  funcs.py  work.ipynb
src/funcs/: data_exploration.py  feature_engineering.py  modelling.py
